--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "framer-motion": "^10.12.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.4",
